[gd_scene load_steps=6 format=3 uid="uid://dnp3cnywdbm7e"]

[ext_resource type="Script" uid="uid://cxr0d8qdnq8m0" path="res://Scripts/HudScript/health_bar.gd" id="1_tpf7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwuhk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft01l"]
bg_color = Color(0.317647, 0.698039, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kx5k"]
bg_color = Color(1, 0.0627451, 0.0627451, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.301961)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4e12"]
bg_color = Color(1, 1, 1, 1)

[node name="HealthBarBoss" type="ProgressBar"]
z_index = 1
offset_right = 240.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_wwuhk")
theme_override_styles/fill = SubResource("StyleBoxFlat_ft01l")
value = 60.0
show_percentage = false
script = ExtResource("1_tpf7b")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -30.0
offset_right = 240.0
offset_bottom = -7.0
vertical_alignment = 1

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6kx5k")
theme_override_styles/fill = SubResource("StyleBoxFlat_s4e12")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
